build-type:	Simple
cabal-version:	>= 1.8

name:		simple-pipe
version:	0.0.0.0
stability:	Experimental
author:		Yoshikuni Jujo <PAF01143@nifty.ne.jp>
maintainer:	Yoshikuni Jujo <PAF01143@nifty.ne.jp>
homepage:	https://github.com/YoshikuniJujo/simple-pipe/wiki

license:	BSD3
license-file:	LICENSE

category:	Data
synopsis:	simple pipeline library like conduit
description:
    yet.

source-repository	head
    type:	git
    location:	git://github.com/YoshikuniJujo/forest.git

source-repository	this
    type:	git
    location:	git://github.com/YoshikuniJujo/forest.git
    tag:	simple-pipe-0.0.0.0

library
    hs-source-dirs:	src
    exposed-modules:	Data.Pipe
    build-depends:
        base == 4.*, monad-control == 0.3.*, lifted-base == 0.2.*,
        monads-tf == 0.1.*
    ghc-options:	-Wall
